Much scaling much wow

--- a/src/styles/elements/_currentAndNext.scss
+++ b/src/styles/elements/_currentAndNext.scss
@@ -8,6 +8,7 @@
   color:white;
   
   .current-and-next-img {
+    background: $current-next-now-bg;
     img {
       width:100%;
       height:auto;
