--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -7,7 +7,7 @@
       {{template "current_and_next" .}}
       </div><!-- /.container -->
     </div><!-- /outer containter -->
-    <div class="container-fluid user-heading">
+    <div class="container-fluid bg-off-white">
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-3">
