--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -21,7 +21,7 @@
           </div>
           <div class="col-12 col-lg-9">
           <div class="row">
-            <h1 class="user-name">{{.Name}} <hr/> </h1>
+            <h1 class="user-name p-2">{{.Name}} <hr/> </h1>
           </div>
           <div class="row">
             {{range limitShowMeta .ShowCredits 0 6}}
@@ -34,10 +34,10 @@
           </div>
           <div class="row">
             <div class="col">
-              <h4>Shows: 10</h4>
+              <h4>Shows: {{len .ShowCredits}}</h4>
             </div>
             <div class="col">
-              <h4>Hours: 10</h4>
+              <h4>Hours: {{showsToHours .ShowCredits}}</h4>
             </div>
           </div>
           </div>
