--- a/sass/main.scss
+++ b/sass/main.scss
@@ -211,7 +211,7 @@ body {
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
-    background: url("/images/URYrecord.png") center center;
+    background: url("/images/URYRecord.png") center center;
     background-size: contain;
   }
 }
