add missing div closers

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -2,12 +2,11 @@
 	{{with .PageData}}
 
 	<div class="container-fluid current-next">
-	<div class="container">
-
+	  <div class="container">
 			{{template "current_and_next" .}}
-
       {{template "banner" .}}
-
+    </div>
+  </div>
 	 <div class="container-fluid index-infobar">
    <div class="container">
    <div class="row justify-content-center">
