--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -42,11 +42,12 @@
       </div>
     </div> <!-- /outer containter -->
     
-    <div class="container outer index-schedule">
-		  <h2>Today's Schedule</h2>
-	  	<h3 style="text-align:center;">We're not broadcasting today, we'll be back on !!DATE!!.</h3>
-      <p style="text-align:center;">In the meantime, how about some On Demand content?</p>
+    <div class="container-fluid index-schedule">
+		  
       <div class="container">
+        <h2>Today's Schedule</h2>
+        <h3 style="text-align:center;">We're not broadcasting today, we'll be back on !!DATE!!.</h3>
+        <p style="text-align:center;">In the meantime, how about some On Demand content?</p>
         <div class="row">  
             <figure class="col-md-6 large">
               <img src="images/show-current.png" alt="img01">
@@ -166,92 +167,58 @@
       </div>
     </div> <!-- /outer containter -->
 
-    <div class="container outer index-videos">
-      <div id="video-container" class="scroll-container">
-        <div class="scroll-body">
-          <h2>URY Sessions</h2>
-          <div class="row">
+    <div class="container-fluid index-videos">
+    <h2>URY Sessions</h2>
+        <div class="row scroll-horiz">
+          
             <div class="col-sm-5 col-md-4 col-lg-3">
-              <div class="thumbnail">
-                <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" alt="...">
-              </div>
+              <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
             </div>
             <div class="col-sm-5 col-md-4 col-lg-3">
-              <div class="thumbnail">
-                <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" alt="...">
-              </div>
+              <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
             </div>
             <div class="col-sm-5 col-md-4 col-lg-3">
-              <div class="thumbnail">
-                <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" alt="...">
-              </div>
+              <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
             </div>
             <div class="col-sm-5 col-md-4 col-lg-3">
-              <div class="thumbnail">
-                <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" alt="...">
-              </div>
+              <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
             </div>
             <div class="col-sm-5 col-md-4 col-lg-3">
-              <div class="thumbnail">
-                <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" alt="...">
-              </div>
+              <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
             </div>
-          </div>
-        </div>
-        <div class="scroll-right">
-            &gt;
         </div>
       </div>
 
     </div> <!-- /outer containter -->
     
-    <div class="container outer index-uryplayer">
-      <div class="scroll-container">
-        <div class="scroll-body">
-          <h2>URY Player: Podcasts</h2>
-          <div class="row">
-            <div class="col-sm-4 col-md-3 col-lg-2">
-              <div class="thumbnail">
-                <p class="podcast-title">Thumbnail label</p>
-                <img src="images/show-current.png" alt="...">
-                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
-              </div>
-            </div>
-            <div class="col-sm-4 col-md-3 col-lg-2">
-              <div class="thumbnail">
-                <p class="podcast-title">Thumbnail label</p>
-                <img src="images/show-current.png" alt="...">
-                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
-              </div>
-            </div>
-            <div class="col-sm-4 col-md-3 col-lg-2">
-              <div class="thumbnail">
-                <p class="podcast-title">Thumbnail label</p>
-                <img src="images/show-current.png" alt="...">
-                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
-              </div>
-            </div>
-            <div class="col-sm-4 col-md-3 col-lg-2">
-              <div class="thumbnail">
-                <p class="podcast-title">Thumbnail label</p>
-                <img src="images/show-current.png" alt="...">
-                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
-              </div>
-            </div>
-            <div class="col-sm-4 col-md-3 col-lg-2">
-              <div class="thumbnail">
-                <p class="podcast-title">Thumbnail label</p>
-                <img src="images/show-current.png" alt="...">
-                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
-              </div>
-            </div>
+    <div class="container-fluid index-uryplayer">
+      <h2>URY Player: Podcasts</h2>
+      <div class="card-deck">
+        <div class="card" style="width: 16rem;">
+          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+          <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
-        <div class="scroll-right">
-            &gt;
+        <div class="card" style="width: 16rem;">
+          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+          <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card" style="width: 16rem;">
+          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+          <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
         </div>
       </div>
-
     </div> <!-- /outer containter -->
 	
 
