--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -20,11 +20,14 @@
   .current-and-next-next {
     background: $current-next-next-bg;
   }
-  .current-and-next-btn {
+  .listen-btn {
     position: absolute;
     bottom: 0.5em;
     right: 0;
     left: 0;
     margin: 0 1em;
+  }
+  .listen-btn-mobile {
+    width:100%;
   }
 }
