--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -4,7 +4,7 @@
 			{{if .Current}}
 				<div class="col-4 col-lg-3 col-xl-2 p-0 current-and-next-img">
 					<img src="/images/show-current.png" alt="" />
-					<a href="https://ury.org.uk/listen" class="btn btn-red current-and-next-btn mobile-hide" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a>
+					<a href="https://ury.org.uk/listen" class="btn btn-red listen-btn mobile-hide" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a>
 				</div>
 				<div class="col-8 col-md p-2 pt-3 px-3 p-md-3 p-lg-4 current-and-next-now">
 					<h2>Now</h2>
@@ -17,6 +17,9 @@
 					{{template "current_next" .Next}}
 				</div>
 			{{end}}
+			<div class="col-12 mobile-only p-0">
+				<a href="https://ury.org.uk/listen" class="btn btn-square btn-red listen-btn-mobile" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a>
+			</div>
 		</div>
 
 	{{end}}
