Use cards for podcasts

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -193,29 +193,95 @@
     
     <div class="container-fluid index-uryplayer">
       <h2>URY Player: Podcasts</h2>
-      <div class="card-deck">
-        <div class="card" style="width: 16rem;">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="row scroll-horiz">
+        <div class="col-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
           </div>
         </div>
-        <div class="card" style="width: 16rem;">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="col-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
           </div>
         </div>
-        <div class="card" style="width: 16rem;">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+         <div class="col-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+         <div class="col-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+         <div class="col-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+         <div class="col-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+         <div class="col-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+         <div class="col-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+         <div class="col-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+         <div class="col-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
           </div>
         </div>
       </div>
