Change mobile font size, make listen button bigger

--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -18,7 +18,7 @@
 				</div>
 			{{end}}
 			<div class="col-12 mobile-only p-0">
-				<a href="https://ury.org.uk/listen" class="btn btn-square btn-red listen-btn-mobile" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a>
+				<a href="https://ury.org.uk/listen" class="btn btn-lg btn-square btn-red listen-btn-mobile" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a>
 			</div>
 		</div>
 
