--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -167,23 +167,23 @@
       </div>
     </div> <!-- /outer containter -->
 
-    <div class="container-fluid index-videos">
+    <div class="container-fluid index-videos py-2">
     <h2>URY Sessions</h2>
         <div class="row scroll-horiz">
           
-            <div class="col-sm-5 col-md-4 col-lg-3">
+            <div class="col-11 col-sm-7 col-md-4 col-lg-3">
               <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
             </div>
-            <div class="col-sm-5 col-md-4 col-lg-3">
+            <div class="col-11 col-sm-7 col-md-4 col-lg-3">
               <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
             </div>
-            <div class="col-sm-5 col-md-4 col-lg-3">
+            <div class="col-11 col-sm-7 col-md-4 col-lg-3">
               <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
             </div>
-            <div class="col-sm-5 col-md-4 col-lg-3">
+            <div class="col-11 col-sm-7 col-md-4 col-lg-3">
               <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
             </div>
-            <div class="col-sm-5 col-md-4 col-lg-3">
+            <div class="col-11 col-sm-7 col-md-4 col-lg-3">
               <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
             </div>
         </div>
@@ -191,10 +191,10 @@
 
     </div> <!-- /outer containter -->
     
-    <div class="container-fluid index-uryplayer">
-      <h2>URY Player: Podcasts</h2>
+    <div class="container-fluid index-uryplayer py-2">
+      <h2>Podcasts</h2>
       <div class="row scroll-horiz">
-        <div class="col-3">
+        <div class="col-11 col-sm-7 col-md-3">
           <div class="card">
             <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
             <div class="card-block">
@@ -203,7 +203,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-11 col-sm-7 col-md-3">
           <div class="card">
             <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
             <div class="card-block">
@@ -212,7 +212,7 @@
             </div>
           </div>
         </div>
-         <div class="col-3">
+         <div class="col-11 col-sm-7 col-md-3">
           <div class="card">
             <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
             <div class="card-block">
@@ -221,7 +221,7 @@
             </div>
           </div>
         </div>
-         <div class="col-3">
+         <div class="col-11 col-sm-7 col-md-3">
           <div class="card">
             <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
             <div class="card-block">
@@ -230,7 +230,7 @@
             </div>
           </div>
         </div>
-         <div class="col-3">
+         <div class="col-11 col-sm-7 col-md-3">
           <div class="card">
             <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
             <div class="card-block">
@@ -239,7 +239,7 @@
             </div>
           </div>
         </div>
-         <div class="col-3">
+         <div class="col-11 col-sm-7 col-md-3">
           <div class="card">
             <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
             <div class="card-block">
@@ -248,7 +248,7 @@
             </div>
           </div>
         </div>
-         <div class="col-3">
+         <div class="col-11 col-sm-7 col-md-3">
           <div class="card">
             <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
             <div class="card-block">
@@ -257,7 +257,7 @@
             </div>
           </div>
         </div>
-         <div class="col-3">
+         <div class="col-11 col-sm-7 col-md-3">
           <div class="card">
             <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
             <div class="card-block">
@@ -266,7 +266,7 @@
             </div>
           </div>
         </div>
-         <div class="col-3">
+         <div class="col-11 col-md-3">
           <div class="card">
             <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
             <div class="card-block">
@@ -275,7 +275,7 @@
             </div>
           </div>
         </div>
-         <div class="col-3">
+         <div class="col-11 col-md-3">
           <div class="card">
             <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
             <div class="card-block">
@@ -286,7 +286,6 @@
         </div>
       </div>
     </div> <!-- /outer containter -->
-	
 
 	{{end}}
 {{end}}
