Added Contact & Get Involved pages, and improved styling & menu links.

--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -4,9 +4,12 @@
   color: white;
   padding:10em 0;
 }
+.current-next.text-overlay {
+  //some kind of effect here.
+}
 .current-and-next {
   color:white;
-  
+
   .current-and-next-img {
     background: $current-next-now-bg;
     img {
