--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -11,8 +11,9 @@
       <a class="nav-item nav-link" href="#">Schedule</a>
       <a class="nav-item nav-link" href="#">Shows</a>
       <a class="nav-item nav-link" href="#">URY Player</a>
-      <a class="nav-item nav-link" href="#">About Us</a>
-      <a class="nav-item nav-link" href="#">Get Involved</a>
+      <a class="nav-item nav-link" href="/about/">About Us</a>
+      <a class="nav-item nav-link" href="/getinvolved/">Get Involved</a>
+      <a class="nav-item nav-link" href="/contact/">Contact Us</a>
     </div>
     <form action="/search/" class="form-inline ml-auto">
         <input type="text" name="term" class="form-control" placeholder="Search">
