--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -1,5 +1,5 @@
 .current-next {
-  background: url('/images/current-next-bg.png') center center no-repeat;
+  background: url('/images/bg-banner-1.jpg') center center no-repeat;
   background-size: cover;
   color: white;
   padding:10em 0;
