Changed static page headers to be more interesting

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -1,16 +1,17 @@
 {{define "content"}}
 <div class="container-fluid current-next">
   <div class="container">
-    <div class="row align-items-center">
+    <div class="row align-items-center text-center">
       <div class="col">
-        <h1 class="text-center">About Us</h1>
+        <h1 class="display-3">On Air, Online, On Demand</h1>
+        <h2 class="display-4">Broadcasting since 1968.</h2>
       </div>
     </div>
   </div>
 </div>
 <div class="container-fluid container-padded bg-off-white">
 	<div class="container">
-    <h1 class="user-title">Welcome to URY!</h1>
+    <h1 class="text-center">Welcome to URY!</h1>
     <div class="row">
       <div class="col-md-6 col-lg-3">
         <h2>Who are URY?</h2>
