--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -1,11 +1,10 @@
 {{define "content"}}
 <div class="container-fluid current-next text-overlay">
   <div class="container">
-    <div class="row text-center align-items-center">
+    <div class="row align-items-center text-center">
       <div class="col">
-        <h1>Say hi to URY!</h1>
-        <p><strong>At URY, radio is a two-way medium.</strong>
-        <br>You can contact our presenters, news team and committee in the following ways.</p>
+        <h1 class="display-2">Say hi to URY!</h1>
+        <h2 class="display-4">At URY, radio is a two-way medium.</h2>
       </div>
     </div>
   </div>
