--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -2,9 +2,16 @@
 <div class="container-fluid current-next text-overlay">
   <div class="row text-center align-items-center">
     <div class="col">
-      <h1>Radio By Students, For Students.</h1>
-      <h2>Want to help York make incredible <strong>Award Winning</strong> radio?</h2>
-      <h2>Want to join one of the best, largest and most diverse societies university has to offer?</h2>
+      <h1 class="display-2">Radio.</h1>
+      <h2 class="display-4">By Students, For Students.</h2>
+    </div>
+  </div>
+</div>
+<div class="container-fluid container-padded text-center bg-off-white">
+  <div class="row text-center align-items-center">
+    <div class="col">
+      <h3>Want to help York make incredible <strong>Award Winning</strong> radio?</h3>
+      <h3>Want to join one of the best, largest and most diverse societies university has to offer?</h3>
       <p>Whether you to hear your voice played out on the airwaves, break the biggest news stories as they happen,
         play with the state-of-the-art studios and computer systems, or just plain have fun, then URY is the place for you.
       </p>
