Added another background image, to make for easier reading and more variety

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -78,6 +78,13 @@ footer {
   padding-bottom:2em;
 }
 
+.banner-2 {
+  background: url('/images/bg-banner-2.jpg') center center no-repeat;
+  background-size: cover;
+  color: white;
+  padding:10em 0;
+}
+
 .index-infobar {
   background: $content-bg-1;
   padding: 3em 0;
