--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -1,5 +1,5 @@
 {{define "content"}}
-<div class="container-fluid current-next text-overlay">
+<div class="container-fluid banner-2 text-overlay">
   <div class="container">
     <div class="row align-items-center text-center">
       <div class="col">
