--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -1,5 +1,5 @@
 {{define "content"}}
-<div class="container-fluid current-next">
+<div class="container-fluid banner-2">
   <div class="container">
     <div class="row align-items-center text-center">
       <div class="col">
