--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -1,5 +1,5 @@
 {{define "content"}}
-<div class="container-fluid current-next text-overlay">
+<div class="container-fluid banner-2 text-overlay">
   <div class="row text-center align-items-center">
     <div class="col">
       <h1 class="display-2">Radio.</h1>
