--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -9,7 +9,7 @@
   <div class="container-fluid index-infobar">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-3 col-xl-3">
+        <div class="pb-4 col-lg-3">
           <h2>Send a Message</h2>
           <hr>
           <form id="sendMessage" action="">
