swap to using columns for the cards

--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="card-deck transparent">
+      <div class="col-6 col-md-3">
         <div class="card">
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
@@ -60,6 +60,8 @@
             <small class="text-muted"><a href="mailto:station.manager@ury.org.uk" title="Email the Station Manager">station.manager@ury.org.uk</a></small>
           </div>
         </div>
+      </div>
+      <div class="col-6 col-md-3">
         <div class="card">
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
@@ -70,6 +72,8 @@
             <small class="text-muted"><a href="mailto:programme.controller@ury.org.uk" title="Email the Programme Controller">programme.controller@ury.org.uk</a></small>
           </div>
         </div>
+      </div>
+      <div class="col-6 col-md-3">
         <div class="card">
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
@@ -80,6 +84,8 @@
             <small class="text-muted"><a href="mailto:music@ury.org.uk" title="Email the Music team">music@ury.org.uk</a></small>
           </div>
         </div>
+      </div>
+      <div class="col-6 col-md-3">
         <div class="card">
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
