Added the last of the details to contact page

--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -94,4 +94,36 @@
     </div>
   </div>
 </div>
+<div class="container-fluid container-padded text-center bg-off-white">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Everything Else</h1>
+        <p>For all other enquiries, contact the URY office.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <h2>Phone</h2>
+        <p><strong>Internal Phone:</strong> 1350 (Free)</p>
+        <p><strong>External Phone:</strong> (+44)1904 32 1350 (Standard Rates)</p>
+      </div>
+      <div class="col-md-4">
+        <h2>Email</h2>
+        <p><strong>Management Team</strong><br>
+          <a href="mailto:ury@ury.org.uk" title="Email URY Management">ury@ury.org.uk</a>
+        </p>
+      </div>
+      <div class="col-md-4">
+        <h2>Location</h2>
+        <p><strong>Postal Address</strong><br>
+          URY, Vanbrugh College<br>
+          University of York<br>
+          York<br>
+          YO10 5DD
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
 {{end}}
