Changed Phone format to match email & location

--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -111,8 +111,8 @@
     <div class="row">
       <div class="col-md-4">
         <h2>Phone</h2>
-        <p><strong>Internal Phone:</strong> 1350 (Free)</p>
-        <p><strong>External Phone:</strong> (+44)1904 32 1350 (Standard Rates)</p>
+        <p><strong>Internal Phone</strong><br>1350 (Free)</p>
+        <p><strong>External Phone</strong><br>(+44)1904 32 1350 (Standard Rates)</p>
       </div>
       <div class="col-md-4">
         <h2>Email</h2>
